# gmkit

./: .gitignore  .goreleaser.yaml  AGENTS.md  NOTICE  README.md  go.mod  go.sum  install.sh  main.go
.github/workflows/: ci.yml  release.yml
cmd/: approvals.go  auth.go  auth_google.go  auth_google_test.go  chats.go  contacts.go  doctor.go  history.go  history_test.go  integration_test.go  mcp.go  media.go  messages.go  parity_test.go  root.go  send.go  serve.go  sync.go  version.go  visual_test.go
cmd/gmcli/: main.go
docs/: rpc-protocol.md
docs/research/: phase-1-libgmessages.md
gmtui/: Cargo.toml  README.md
gmtui/src/: app.rs  event.rs  main.rs  model.rs  rpc.rs  ui.rs
internal/cmd/: approvals.go  auth.go  auth_google.go  chats.go  contacts.go  doctor.go  doctor_test.go  history.go  history_test.go  integration_test.go  mcp.go  media.go  messages.go  parity_test.go  root.go  send.go  serve.go  sync.go  version.go  version_test.go
internal/daemonctl/: daemonctl.go
internal/gm/: cookies.go  gm.go
internal/history/: history.go
internal/logging/: logging.go
internal/notify/: notify.go
internal/output/: output.go
internal/paths/: paths.go  paths_test.go
internal/rpc/: client.go  handlers.go  protocol.go  rpc_test.go  server.go
internal/store/: aliases.go  aliases_test.go  approvals.go  approvals_test.go  contacts.go  conversations.go  messages.go  queries_test.go  schema.go  search.go  search_test.go  store.go  store_test.go
internal/sync/: sync.go
skills/: README.md  doc.go  skill_test.go
skills/google-messages/: SKILL.md
(+1 files in other folders)
